# tripglass

./: TripGlasses Firmware.c
pcnec-0.5/: AUTHORS  Makefile  Makefile.am  Makefile.in  TODO  acinclude.m4  aclocal.m4  config.cache  config.h  config.h~  config.status  configure  configure.in  configure.in.in  libtool  pcnec.kdevprj  pcnec.kdevses  pcnec.lsm  subdirs
pcnec-0.5/admin/: am_edit
pcnec-0.5/pcnec/: Makefile  Makefile.am  Makefile.in  decode.c  decode.h  lowlevel.c  lowlevel.h  main.c  main.h  microdelay.c  microdelay.h  nec78k0.c  nec78k0.h  nec78k0_20030204.c  pcnec  test1.hex
pcnec-0.5/pcnec/.deps/: decode.P  lowlevel.P  main.P  microdelay.P  nec78k0.P
pcnec-0.5/pcnec/docs/: Makefile  Makefile.in
pcnec-0.5/pcnec/docs/en/: Makefile  Makefile.am  Makefile.in  Makefile~  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  index.sgml
