####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = pcnec
pcnec_SOURCES = decode.c microdelay.c nec78k0.c lowlevel.c main.c 
pcnec_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = main.c lowlevel.c lowlevel.h nec78k0.c microdelay.h microdelay.c nec78k0.h main.h decode.h decode.c 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
pcnec_LDFLAGS = $(all_libraries) 
                                                                                
