####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = index.html index-1.html index-2.html index-3.html index-4.html index-5.html index-6.html 

install-data-local:
	$(mkinstalldirs) ${prefix}/share/doc/${PACKAGE}-${VERSION}/
	$(INSTALL_DATA) $(srcdir)/index.html ${prefix}/share/doc/${PACKAGE}-${VERSION}/index.html 
	$(mkinstalldirs) ${prefix}/share/doc/${PACKAGE}-${VERSION}/
	$(INSTALL_DATA) $(srcdir)/index-1.html ${prefix}/share/doc/${PACKAGE}-${VERSION}/index-1.html 
	$(mkinstalldirs) ${prefix}/share/doc/${PACKAGE}-${VERSION}/
	$(INSTALL_DATA) $(srcdir)/index-2.html ${prefix}/share/doc/${PACKAGE}-${VERSION}/index-2.html 
	$(mkinstalldirs) ${prefix}/share/doc/${PACKAGE}-${VERSION}/
	$(INSTALL_DATA) $(srcdir)/index-3.html ${prefix}/share/doc/${PACKAGE}-${VERSION}/index-3.html 
	$(mkinstalldirs) ${prefix}/share/doc/${PACKAGE}-${VERSION}/
	$(INSTALL_DATA) $(srcdir)/index-4.html ${prefix}/share/doc/${PACKAGE}-${VERSION}/index-4.html 
	$(mkinstalldirs) ${prefix}/share/doc/${PACKAGE}-${VERSION}/
	$(INSTALL_DATA) $(srcdir)/index-5.html ${prefix}/share/doc/${PACKAGE}-${VERSION}/index-5.html 
	$(mkinstalldirs) ${prefix}/share/doc/${PACKAGE}-${VERSION}/
	$(INSTALL_DATA) $(srcdir)/index-6.html ${prefix}/share/doc/${PACKAGE}-${VERSION}/index-6.html 

uninstall-local:
	-rm -f ${prefix}/share/doc/${PACKAGE}-${VERSION}/index.html 
	-rm -f ${prefix}/share/doc/${PACKAGE}-${VERSION}/index-1.html 
	-rm -f ${prefix}/share/doc/${PACKAGE}-${VERSION}/index-2.html 
	-rm -f ${prefix}/share/doc/${PACKAGE}-${VERSION}/index-3.html 
	-rm -f ${prefix}/share/doc/${PACKAGE}-${VERSION}/index-4.html 
	-rm -f ${prefix}/share/doc/${PACKAGE}-${VERSION}/index-5.html 
	-rm -f ${prefix}/share/doc/${PACKAGE}-${VERSION}/index-6.html 

####### kdevelop will overwrite this part!!! (end)############
